--- a/fingerprint-matching/Makefile
+++ b/fingerprint-matching/Makefile
@@ -17,4 +17,4 @@ FDU07_TARGET = $(PORT)/fingerprint-matching
 all : $(FDU07_TARGET)
 
 $(FDU07_TARGET) : $(OBJS)
-	$(CPP) -o $@ $(OBJS) $(LIBS) -lsgfplib -lsgnfiq -lsgimage -lsgfpamx -lsgfdu07 -lusb -lpthread
+	$(CPP) -o $@ $(OBJS) -I/usr/include/mariadb -I/usr/include/mariadb/mysql $(LIBS) -lsgfplib -lsgnfiq -lsgimage -lsgfpamx -lsgfdu07 -lusb -lpthread -L/usr/lib/x86_64-linux-gnu/ -lmariadb -lz -ldl -lm -lpthread -lgnutls
