--- a/fingerprint-scanning/Makefile
+++ b/fingerprint-scanning/Makefile
@@ -16,4 +16,4 @@ FDU07_TARGET = $(PORT)/fingerprint-scanner
 all : $(FDU07_TARGET)
 
 $(FDU07_TARGET) : $(OBJS)
-	$(CPP) -o $@ $(OBJS) $(LIBS) -lsgfplib -lsgnfiq -lsgimage -lsgfpamx -lsgfdu07 -lusb -lpthread
+	$(CPP) -o $@ $(OBJS) $(mysql_config --cflags) $(LIBS) $(mysql_config --libs) -lsgfplib -lsgnfiq -lsgimage -lsgfpamx -lsgfdu07 -lusb -lpthread -lmysqlclient
